--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,19 +30,19 @@
             <button class="button-action">call to action &#8594</button>
             <a href="#" class="see-more">see more</a>
         </section>
-        <section>
-            <h2>quisque ac elit</h2>
-            <h3>subheading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illum a beatae excepturi, harum ab sed maiores nam quo! Excepturi, reprehenderit! Ea dolorum quaerat facere nulla dignissimos, assumenda fugiat voluptatum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos ad autem accusamus natus reiciendis necessitatibus veniam dignissimos enim error nulla, quis cupiditate accusantium quaerat sequi corrupti provident maxime ratione.</p>
+        <section class="content">
+            <h2 class="content__heading">quisque ac elit</h2>
+            <h3 class="content__subheading">subheading</h3>
+            <p class="content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illum a beatae excepturi, harum ab sed maiores nam quo! Excepturi, reprehenderit! Ea dolorum quaerat facere nulla dignissimos, assumenda fugiat voluptatum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos ad autem accusamus natus reiciendis necessitatibus veniam dignissimos enim error nulla, quis cupiditate accusantium quaerat sequi corrupti provident maxime ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis inventore quia unde ipsum? Officiis ab dolorem provident mollitia at eius, numquam voluptates, magnam maxime in, quae odio. Tenetur, dicta possimus.</p>
         </section>
-        <section>
-            <div class="gallery">
-                <div class="gallery__main"></div>
-                <div class="gallery_miniatures"></div>
+        <section class="gallery">
+            <div class="view">d
+                <div class="view_main"></div>
+                <div class="view__miniatures"></div>
             </div>
-            <aside>
-                <h2>questions</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
+            <aside class="aside-content">
+                <h2 class="aside-content__heading">questions?</h2>
+                <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
             </aside>
         </section>
         <section>
