--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,8 +8,8 @@
     <title>Test UID - Grzegorz Makuch</title>
 </head>
 <body>
-    <header class="top-header">
-        <div class="top-header__content">
+    <header class="header">
+        <div class="header__container">
             <div class="logo">
                 <div class="logo__icon">A</div>
                 <div class="logo__title">ACME CO.</div>
@@ -21,23 +21,23 @@
                 <a class="navigation__item" href="#">Contact Us</a>
             </nav>
         </div>
+        <article class="hero">
+            <h1 class="hero__subheading">subheading</h1>
+            <h2 class="hero__heading">heading</h2>
+            <p class="hero__paragraph">Quisque, ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quis vitae optio obcaecati debitis deserunt, commodi natus cum possimus nesciunt deleniti? Nostrum modi vero qui consequuntur, neque suscipit odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis nam cum iste neque. Quia quis optio reiciendis nesciunt, fugit aliquid autem. Illum officia eum necessitatibus illo dolorem obcaecati sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore optio praesentium cumque. Eligendi officiis explicabo quidem porro quos, dolores commodi repudiandae voluptates debitis nam placeat. Eum veritatis libero modi ullam.</p>
+            <button class="button-action">call to action &#8594;</button>
+        </article>
+        <a href="#content" class="see-more">see more</a>
     </header>
     <main>
-        <section class="title-section">
-            <h1 class="title-section__subheading">subheading</h1>
-            <h2 class="title-section__heading">heading</h2>
-            <p class="title-section__paragraph">Quisque, ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quis vitae optio obcaecati debitis deserunt, commodi natus cum possimus nesciunt deleniti? Nostrum modi vero qui consequuntur, neque suscipit odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis nam cum iste neque. Quia quis optio reiciendis nesciunt, fugit aliquid autem. Illum officia eum necessitatibus illo dolorem obcaecati sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore optio praesentium cumque. Eligendi officiis explicabo quidem porro quos, dolores commodi repudiandae voluptates debitis nam placeat. Eum veritatis libero modi ullam.</p>
-            <button class="button-action">call to action &#8594</button>
-            <a href="#" class="see-more">see more</a>
-        </section>
-        <section class="content">
+        <section class="content" id="content">
             <h2 class="content__heading">quisque ac elit</h2>
             <h3 class="content__subheading">subheading</h3>
             <p class="content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illum a beatae excepturi, harum ab sed maiores nam quo! Excepturi, reprehenderit! Ea dolorum quaerat facere nulla dignissimos, assumenda fugiat voluptatum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos ad autem accusamus natus reiciendis necessitatibus veniam dignissimos enim error nulla, quis cupiditate accusantium quaerat sequi corrupti provident maxime ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis inventore quia unde ipsum? Officiis ab dolorem provident mollitia at eius, numquam voluptates, magnam maxime in, quae odio. Tenetur, dicta possimus.</p>
         </section>
         <section class="gallery">
-            <div class="view">d
-                <div class="view_main"></div>
+            <div class="view">
+                <div class="view__main"></div>
                 <div class="view__miniatures"></div>
             </div>
             <aside class="aside-content">
