--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -38,12 +38,13 @@
         <section class="gallery">
             <div class="gallery__container">
                 <div class="image-viewer">
-                    <div class="image-viewer__picture"></div>
-                    <ul class="image-viewer__thumbnails"></ul>
-                    <div class="image-viewer__buttons">
-                        <div class="image-viewer__buttons--prev">&#8592;</div>
-                        <div class="image-viewer__buttons--next">&#8594;</div>
+                    <img class="image-viewer__picture" src="#">
+                    <div class="buttons-container">
+                        <div class="buttons-container__button js--btn-prev">&#8592;</div>
+                        <div class="buttons-container__button js--btn-next">&#8594;</div>
                     </div>
+                    <div class="image-viewer__thumbnails">
+                    </div> <!--tutaj generuja sie miniatury-->
                 </div>
                 <aside class="aside-content">
                     <h2 class="aside-content__heading">questions?</h2>
