--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -91,6 +91,6 @@
             </div>
         </footer>
     </main>
-    <script src="gallery.js"></script>
+    <script src="./../js/scripts.js"></script>
 </body>
 </html>
