--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,8 +54,8 @@
         </section>
         <section class="bonus-content">
             <h2 class="bonus-content__subheading">q subheading</h2>
-            <h3 class="bonus-content__heading">quisque ac elit</h3>
             <article>
+                <h3 class="bonus-content__heading">quisque ac elit</h3>
                 <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque molestiae quibusdam, fugiat expedita quas, nam vitae odio dolor consequatur, ex obcaecati? Assumenda corrupti odio veniam amet non at consectetur nam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo modi quam dolorum minima. Dolorum, quisquam in nihil, aspernatur molestiae nostrum quidem voluptas iste dolor molestias suscipit, maiores unde illum eveniet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur blanditiis autem quod dignissimos totam, omnis eaque, placeat ut, suscipit repellat eos quas dolore. Ex libero laborum tempore iste, impedit delectus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, aspernatur, ut harum unde veritatis similique, maiores eligendi deleniti tenetur rem voluptates tempora. Consequuntur enim odio ex vero perspiciatis ipsam eveniet!</p>
                 <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, doloribus hic non dolorem laborum, eaque quae sit quaerat praesentium, a sapiente vel. Laudantium ex qui distinctio dignissimos, dolore obcaecati repellendus.</p>
                 <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nemo sint fugiat officia veniam commodi temporibus cupiditate. Eligendi unde, libero deleniti, non, ut culpa officia corporis numquam cum alias obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, itaque voluptatum laborum in eius dolor dolores nisi non laudantium animi explicabo facilis, pariatur aut porro. Sit ipsa eveniet adipisci optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, provident officia necessitatibus quod modi rem sint veniam id porro laborum? Suscipit sed vel exercitationem soluta necessitatibus, quidem tenetur quo id.</p>
@@ -63,34 +63,36 @@
             </article>
         </section>
         <section class="gallery">
-            <aside class="aside-content">
-                <h2 class="aside-content__heading">high quality</h2>
-                <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
-            </aside>
-            <div class="image-viewer">
-                <div class="image-viewer__picture"></div>
-                <ul class="image-viewer__thumbnails"></ul>
-                <div class="image-viewer__buttons">
-                    <div class="image-viewer__buttons--prev">&#8592;</div>
-                    <div class="image-viewer__buttons--next">&#8594;</div>
+            <div class="gallery__container">
+                <aside class="aside-content">
+                    <h2 class="aside-content__heading">high quality</h2>
+                    <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
+                </aside>
+                <div class="image-viewer">
+                    <div class="image-viewer__picture"></div>
+                    <ul class="image-viewer__thumbnails"></ul>
+                    <div class="image-viewer__buttons">
+                        <div class="image-viewer__buttons--prev">&#8592;</div>
+                        <div class="image-viewer__buttons--next">&#8594;</div>
+                    </div>
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <div class="footer__container">
-                <div class="footer__logo">
-                    <a href="#header">A</a>
-                </div>
-                <nav class="navigation">
-                    <a class="navigation__item" href="#">About Us</a>
-                    <a class="navigation__item" href="#">Careers</a>
-                    <a class="navigation__item" href="#">News</a>
-                    <a class="navigation__item" href="#">Contact Us</a>
-                </nav>
-                <div>&#xA9; Copyright by ACME Co.</div>
-            </div>
-        </footer>
     </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <a href="#header">A</a>
+            </div>
+            <nav class="navigation">
+                <a class="navigation__item" href="#">About Us</a>
+                <a class="navigation__item" href="#">Careers</a>
+                <a class="navigation__item" href="#">News</a>
+                <a class="navigation__item" href="#">Contact Us</a>
+            </nav>
+            <div>&#xA9; Copyright by ACME Co.</div>
+        </div>
+    </footer>
     <script src="./../js/scripts.js"></script>
 </body>
 </html>
