--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,8 +26,8 @@
             <h2 class="hero__heading">heading</h2>
             <p class="hero__paragraph">Quisque, ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quis vitae optio obcaecati debitis deserunt, commodi natus cum possimus nesciunt deleniti? Nostrum modi vero qui consequuntur, neque suscipit odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis nam cum iste neque. Quia quis optio reiciendis nesciunt, fugit aliquid autem. Illum officia eum necessitatibus illo dolorem obcaecati sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore optio praesentium cumque. Eligendi officiis explicabo quidem porro quos, dolores commodi repudiandae voluptates debitis nam placeat. Eum veritatis libero modi ullam.</p>
             <button class="button-action">call to action &#8594;</button>
+            <a href="#content" class="see-more">see more</a>
         </article>
-        <a href="#content" class="see-more">see more</a>
     </header>
     <main>
         <section class="content" id="content">
@@ -81,7 +81,7 @@
     </main>
     <footer class="footer">
         <div class="footer__container">
-            <div class="footer__logo">
+            <div class="footer-logo">
                 <a href="#header">A</a>
             </div>
             <nav class="navigation">
@@ -90,7 +90,7 @@
                 <a class="navigation__item" href="#">News</a>
                 <a class="navigation__item" href="#">Contact Us</a>
             </nav>
-            <div>&#xA9; Copyright by ACME Co.</div>
+            <div class="copyright">&#xA9; Copyright by ACME Co.</div>
         </div>
     </footer>
     <script src="./../js/scripts.js"></script>
