--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,14 +39,14 @@
             <div class="gallery__container">
                 <div class="image-viewer">
                     <img class="image-viewer__picture" src="#">
-                    <div class="buttons-container">
+                    <div class="buttons-container__right">
                         <div class="buttons-container__button js--btn-prev">&#8592;</div>
                         <div class="buttons-container__button js--btn-next">&#8594;</div>
                     </div>
                     <div class="image-viewer__thumbnails">
                     </div> <!--tutaj generuja sie miniatury-->
                 </div>
-                <aside class="aside-content">
+                <aside class="aside-content__right">
                     <h2 class="aside-content__heading">questions?</h2>
                     <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
                 </aside>
@@ -62,19 +62,20 @@
                 <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis ipsam modi ipsa expedita? Nisi facere hic nesciunt fuga, ut at sequi dolores voluptate quod, quibusdam obcaecati nulla veritatis. Quidem, corporis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea error eius voluptates ratione tenetur aut accusamus, dicta, nostrum magni, non quo. Quo, sit debitis quibusdam commodi nemo nesciunt voluptate dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ad inventore nesciunt quisquam. Dolore laborum asperiores omnis suscipit perferendis nemo quis voluptate, commodi sapiente molestiae, beatae voluptates hic animi labore! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam qui ea, officia sed repudiandae doloribus porro praesentium recusandae accusamus atque odit natus quisquam voluptatibus ad? Labore corrupti tenetur molestiae amet.</p>
             </article>
         </section>
-        <section class="gallery">
-            <div class="gallery__container">
-                <aside class="aside-content">
+        <section class="gallery2">
+            <div class="gallery2__container">
+                <aside class="aside-content__left">
                     <h2 class="aside-content__heading">high quality</h2>
                     <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
                 </aside>
                 <div class="image-viewer">
-                    <div class="image-viewer__picture"></div>
-                    <ul class="image-viewer__thumbnails"></ul>
-                    <div class="image-viewer__buttons">
-                        <div class="image-viewer__buttons--prev">&#8592;</div>
-                        <div class="image-viewer__buttons--next">&#8594;</div>
+                    <img class="image-viewer__picture" src="#">
+                    <div class="buttons-container__left">
+                        <div class="buttons-container__button js--btn-prev">&#8592;</div>
+                        <div class="buttons-container__button js--btn-next">&#8594;</div>
                     </div>
+                    <div class="image-viewer__thumbnails2">
+                    </div> <!--tutaj generuja sie miniatury-->
                 </div>
             </div>
         </section>
